@@ -450,6 +450,25 @@ F:unexpected side-effects of previous tests
 1:looping assignment not allowed
 *?*invalid self reference
 
+ typeset ptr1=not-a-ref
+ () {
+   typeset -n ptr1=ptr1
+   () {
+     typeset -n ptr1=ptr1
+     echo $ptr1
+   }
+ }
+0:regression: not a self reference (test 1)
+>not-a-ref
+
+ typeset -n ptr1
+ typeset -n ptr2=ptr1
+ () {
+   typeset ptr2=no-a-ref
+   typeset -n ptr1=ptr2
+ }
+0:regression: not a self reference (test 2)
+
  unset -n ptr2
  typeset -n ptr2='path[2]'
  print -r -- $ptr2
