@@ -429,14 +429,7 @@ F:Here ptr1 points to global ptr2 so assignment succeeds
    setopt localoptions errreturn
    private -n ptr2
    typeset -n ptr1=ptr2
-   typeset -p ptr1 ptr2
-   typeset val=LOCAL
-   () {
-     ptr1=val
-     typeset -n
-     printf "v %s=%s\n" ptr1 "$ptr1" ptr2 "$ptr2"
-   }
-   typeset -p ptr1 ptr2
+   echo NOT REACHED
  }
  typeset -p ptr1 ptr2
 1:up-reference for private namerefs, end is in scope but private
@@ -444,6 +437,20 @@ F:Should we allow "public" namerefs to private parameters?
 *?*ptr2: invalid reference
 *?*no such variable: ptr1
 *?*no such variable: ptr2
+
+ () {
+   typeset ptr2=foo
+   typeset -n ptr1=ptr2
+   () {
+     setopt localoptions errreturn
+     private -n ptr2
+     typeset -n ptr1=ptr2
+     echo NOT REACHED
+   }
+ }
+1:regression test for invalid reference detection
+F:Should we allow "public" namerefs to private parameters?
+*?*ptr2: invalid reference
 
  () {
    private x=1
